--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tempapp",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://manali-biswas.github.io/MovieApp",
+  "homepage": "https://manali-biswas.github.io/MovieApp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
+    "react-bootstrap-multiselect": "^2.4.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
